@@ -1003,7 +1003,7 @@ BEGIN
     LTEXT           "13 frames will be saved",IDC_STAT_NUM_DE_RAW,177,456,97,8
     CONTROL         "Save frames",IDC_SAVE_FRAMES,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,213,381,54,10
     PUSHBUTTON      "Set File Options",IDC_BUT_FILE_OPTIONS,217,402,55,14
-    RTEXT           "999 to TIF-LZW stack, packed",IDC_STAT_SAVE_SUMMARY,171,392,103,8
+    RTEXT           "999 to TIF-LZW stack, packed",IDC_STAT_SAVE_SUMMARY,171,392,108,8
     LTEXT           "Integration",IDC_STATINTEGRATION,22,164,32,8
     EDITTEXT        IDC_EDITINTEGRATION,55,162,21,14,ES_AUTOHSCROLL
     CONTROL         "",IDC_SPININTEGRATION,"msctls_updown32",UDS_ARROWKEYS,76,162,10,14
@@ -1038,7 +1038,7 @@ BEGIN
     CTEXT           "Align in Server",IDC_STAT_DE_WHERE_ALIGN,63,511,123,8
     LTEXT           "sec",IDC_STAT_DE_FRAME_SEC,178,468,12,8
     CONTROL         "Use Hardware ROI",IDC_CHECK_HARDWARE_ROI,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,11,167,73,10
-    CONTROL         "Bin normalized counting frames by 2",IDC_CHECK_TAKE_K3_BINNED,
+    CONTROL         "Bin counting frames by 2 in hardware",IDC_CHECK_TAKE_K3_BINNED,
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,438,136,10
     LTEXT           "99.99 e/sq A per frame",IDC_STAT_DOSE_PER_FRAME,27,302,97,8
 END
@@ -2615,7 +2615,7 @@ BEGIN
     CONTROL         "Save normalized data as 16-bit with 100 times scaling of sum",IDC_SAVE_TIMES_100,
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,14,105,217,10
     CTEXT           "Current settings will save",IDC_STAT_CURSET1,156,15,84,9
-    CTEXT           " TIF LZW stack, packed",IDC_STAT_CURSET2,151,25,92,8
+    CTEXT           " TIF LZW stack, packed",IDC_STAT_CURSET2,145,25,103,8
     CONTROL         "",IDC_TSS_LINE2,"Static",SS_BLACKFRAME | SS_SUNKEN,7,76,241,1
 END
 
@@ -3654,7 +3654,7 @@ BEGIN
     IDC_SPINCURRENTBUF      "Change currently displayed buffer"
     IDC_EDITXNFRAMES        "Enter number of frames in X direction"
     IDC_EDITYNFRAMES        "Enter number of frames in Y direction"
-    IDC_BUTFOCUS            "Find focus with beam-tilted images"
+    IDC_BUTFOCUS            "Find focus with beam-tilted images (TEM) or ones at multiple focus (STEM)"
     IDC_ADJUSTFOCUS         "Adjust focus by change in Z height of each frame"
     IDC_EDITZ               "Enter a new current Z value"
     IDC_SHOW_OVERVIEW       "Show buffer B with overview after acquiring montage"
