@@ -3,6 +3,9 @@ This is a record of changes to SerialEM since it was first publicly released.
 * marks changes or enhancements noticeable to the user, or items of particular
 significance.
 ============================================================================
+12/5/18: Made it possible to save unnormalized hardware binned frames from K3
+and get a gain reference for normalizing them.
+
 12/2/18: Added option to save an mdoc file along with each frame stack.
 
 12/2/18: Made changes so that the program can get dose rate from DM for K2 and
